<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data >
        <variable
            name="dataUi"
            type="com.gibsoncodes.weatherapp.ui.models.ForecastDataUi" />
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/coordinator"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/searchTxt"
           android:layout_marginStart="10dp"
           android:gravity="center"
           android:drawablePadding="10dp"
           android:textSize="18sp"
           android:drawableTop="@drawable/emoji"
           android:text="@string/searchForAcity"
           android:layout_centerInParent="true"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/mainProgress"
            android:indeterminateTint="@android:color/black"
           />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:id="@+id/revLayout"
            android:visibility="gone"
            android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityName"
        android:textSize="18sp"
        android:id="@+id/cityNameLabel"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
     />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_toEndOf="@id/cityNameLabel"
    android:layout_marginStart="10dp"
    android:text="@{dataUi.name}"
    android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countryName"
            android:textSize="18sp"
            android:id="@+id/countryNameLabel"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_below="@id/cityNameLabel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cityNameLabel"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/countryNameLabel"
            android:layout_marginStart="10dp"
            android:text="@{dataUi.country}"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textSize="18sp"
            android:id="@+id/weather"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_below="@id/countryNameLabel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryNameLabel"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/weather"
            android:id="@+id/weatherName"
            android:layout_marginStart="10dp"
            android:text="@{dataUi.weather.main}"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:id="@+id/description"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_below="@id/weather"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/description"
            android:id="@+id/weatherDescription"
            android:layout_marginStart="10dp"
            android:text="@{dataUi.weather.description}"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:textSize="18sp"
            android:id="@+id/icon"
            android:text="@string/icon"
            android:layout_below="@id/description"/>
        <ImageView
            android:layout_width="64dp"
            android:layout_below="@id/description"
            android:layout_toEndOf="@id/icon"
            android:layout_marginStart="20dp"
            android:src="@color/colorPrimary"
            android:layout_height="64dp"
            android:id="@+id/iconFld"
            android:layout_marginTop="10dp"
            tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textSize="18sp"
                android:id="@+id/temp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                android:layout_below="@id/icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iconFld"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/temp"
                android:id="@+id/tempFld"
                android:layout_marginStart="10dp"
                android:text="@{Float.toString(dataUi.temp)}"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="18sp"
                android:id="@+id/speed"
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                android:layout_below="@id/temp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tempFld"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@id/speed"
                android:id="@+id/speedFLd"
                android:layout_marginStart="10dp"
                android:text="@{Float.toString(dataUi.wind.speed)}"
                android:textSize="18sp"/>
        </RelativeLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>